    - automatic stacktrace mechanism is now turned off by default and can
      be switched on by command line option "--stacktrace" (the automatic
      stacktrace mechanism seems to be broken on most systems at the moment)
    - C++ API method InstrumentManager::LaunchInstrumentEditor() now returns
      a pointer to the launched InstrumentEditor object

  * audio driver:
    - removed the nonsense audio channel constraint (which was hard coded to
      max. 100 audio channels) for most audio drivers
    - JACK audio driver did not offer a device parameter "SAMPLERATE" as
      opposed to the LSCP specs
    - bugfix: the SAMPLERATE parameter of some drivers (e.g. JACK)
      reflected the wrong value
    - fixed a memory management bug in ASIO driver
    - Makefile fix: JACK_CFLAGS wasn't used
    - JACK: use jack_client_open instead of the deprecated
      jack_client_new
    - added (experimental) CoreAudio driver

  * MIDI driver:
    - added JACK MIDI driver
    - dispatch bank select as ordinary CC as well, the user might seriously
      want to (mis)use it for some purpose ("fixed" in all current MIDI
      input drivers: ALSA, CoreMIDI, JACK, MidiShare, MME)

  * instruments database:
    - avoid time consuming samples scanning when adding instruments
      to the instruments database
    - added support for handling lost files in the instruments database
    - Implemented option for adding instruments in separate directories
      in the instruments database
      (patch by Chris Cherrett & Andrew Williams, a bit adjusted)

  * Gigasampler format engine:
    - fixed a memory leak that could happen when a channel was deleted
      while notes were playing
    - made it possible to load an instrument even if the audio thread
      isn't running
    - added partial support for the "Controller Triggered" MIDI rule,
      enough for piano gigs with pedal noise samples
    - minor fix: only mark FX sends as being modified if really the